Signed-off-by: lw000 <373102227@qq.com> 更新

--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -19,11 +19,11 @@
     <ClCompile Include="..\game_ai\game_ai.cpp" />
     <ClCompile Include="..\game_client\GameClient.cpp" />
     <ClCompile Include="..\game_client\GameClientHandler.cpp" />
-    <ClCompile Include="..\game_server\GameHandler.cpp" />
-    <ClCompile Include="..\game_server\GameServer.cpp" />
+    <ClCompile Include="..\game_server\GameDeskHandler.cpp" />
+    <ClCompile Include="..\game_server\GameServerMgr.cpp" />
     <ClCompile Include="..\http_server\http_server_business.cpp" />
     <ClCompile Include="..\platform_server\PlatformServer.cpp" />
-    <ClCompile Include="..\platform_server\RoomServer.cpp" />
+    <ClCompile Include="..\platform_server\RoomServerMgr.cpp" />
     <ClCompile Include="..\protocol\chat.pb.cc" />
     <ClCompile Include="..\protocol\game.pb.cc" />
     <ClCompile Include="..\protocol\platform.pb.cc" />
@@ -49,11 +49,11 @@
     <ClInclude Include="..\game_ai\game_ai.h" />
     <ClInclude Include="..\game_client\GameClient.h" />
     <ClInclude Include="..\game_client\GameClientHandler.h" />
-    <ClInclude Include="..\game_server\GameHandler.h" />
-    <ClInclude Include="..\game_server\GameServer.h" />
+    <ClInclude Include="..\game_server\GameDeskHandler.h" />
+    <ClInclude Include="..\game_server\GameServerMgr.h" />
     <ClInclude Include="..\http_server\http_server_business.h" />
     <ClInclude Include="..\platform_server\PlatformServer.h" />
-    <ClInclude Include="..\platform_server\RoomServer.h" />
+    <ClInclude Include="..\platform_server\RoomServerMgr.h" />
     <ClInclude Include="..\protocol\chat.pb.h" />
     <ClInclude Include="..\protocol\command.h" />
     <ClInclude Include="..\protocol\game.pb.h" />
